# MapperProject

./: .gitignore  Jenkinsfile  pyproject.toml
src/core/: dataframe_cache.py  integrator.py  integrator_factory.py
src/integrators/: integrator_x.py
src/mapper/: base.py
src/mapping/: core.py  output_schema.py
src/utils/: catalog.py  load.py
test/: test_integrator.py
test/data/: exemple.json
