[tool.poetry]
name = "pyspark-project"
version = "0.1.0"
description = "A PySpark project example"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.0"
pandas = "^1.5.0"
pyarrow = "^10.0.0"
numpy = "^1.23.0"
strenum ="*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0"
flake8 = "^5.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"